# olympiad_platform

./: .gitignore  build.sh  dump.rdb  pyproject.toml  requirements.txt
olympiad_platform/: .codeclimate.yml  .coverage  Procfile  build.sh  combined_data.json  pytest.ini
olympiad_platform/apps/courses/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
olympiad_platform/apps/home/: urls.py  views.py
olympiad_platform/apps/olympiads/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
olympiad_platform/apps/students/: admin.py  forms.py  models.py  urls.py  views.py
olympiad_platform/media/homework_files/: Новый_Чувак_Введение_в_биоинженерию_Первое_знакомство_с_работой_в_лаборатории.docx
olympiad_platform/olympiad/: asgi.py  constants.py  settings.py  urls.py  views.py  wsgi.py
olympiad_platform/static/: style.css
olympiad_platform/static/css/: main.css
olympiad_platform/staticfiles/: favicon.ico.br  staticfiles.json  style.ae25642d9509.css  style.ae25642d9509.css.br  style.css.br
olympiad_platform/staticfiles/css/: main.1a1465d61863.css.br
olympiad_platform/templates/: 404-error-page.html  base.html  basic.html  index.html  is_not_ready.html  main_page.html  registration.html  student_or_teacher.html
olympiad_platform/templates/courses/: all_courses.html  assignment_check.html  assignment_page.html  course_main_page.html  course_registration.html  courses_list.html  lesson_page.html  lesson_page_comments.html  lessons_search.html
olympiad_platform/templates/home/: 404-error-page.html  basic.html  index.html  is_not_ready.html
olympiad_platform/templates/olympiads/: all_olympiads.html  index.html  m_question.html  m_question_result.html  o_question.html  o_question_result.html  olympiad_main_page.html  olympiad_page.html  olympiad_page_results.html  olympiads_list.html  page_after_sending_olympiads_answers.html  t_question.html  t_question_result.html
olympiad_platform/templates/students/: change_info.html  delete_user.html  login.html  logout.html  password_change.html  password_reset_confirm.html  password_reset_email.html  profile.html  register_done.html  register_user.html  reset_password.html  reset_password_done.html  (+1 more)
(+119 files in other folders)
